Update pom with comments